--- a/customers/templates/customers/customers_detail.html
+++ b/customers/templates/customers/customers_detail.html
@@ -19,7 +19,7 @@
 
     <tr class="table-success">
         <th><label about=""> Επωνυμία Επιχείρησης </label></th>
-        <th>Ονοματεπώνυμο</th>
+        <th>Ονοματεπώνυμο υπευθύνου</th>
         <th>Διεύθυνση</th>
         <th>Τηλέφωνο</th>
         <th>Κινητό</th>
