--- a/spareparts/templates/spareparts/add_spareparts.html
+++ b/spareparts/templates/spareparts/add_spareparts.html
@@ -1,15 +1,13 @@
+{% extends 'base.html' %}
+{% block content %}
 
 
 
-
-<a class="btn btn-info btn-lg rounded-pill" href="{% url 'spareparts:spareparts' %}">
-    <svg class="bi bi-gear-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-        <path fill-rule="evenodd" d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 01-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 01.872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 012.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 012.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 01.872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 01-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 01-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 100-5.86 2.929 2.929 0 000 5.858z" clip-rule="evenodd"/>
-    </svg>Ανταλλακτικά
-
+<a class="btn btn-light btn-lg rounded-pill " href="{% url 'spareparts:spareparts' %}">
+    <i class="fas fa-calendar-alt"> </i>
+     Προσθήκη ανταλλακτικού
 </a>
-
-
+<div class="container-fluid">
 <p></p>
 
  {% if form.errors %}
@@ -29,93 +27,80 @@
 
 
 {% load crispy_forms_tags %}
-<form  method="POST">
+<form  method="POST" enctype="multipart/form-data" id=add_spareparts_form>
     {% csrf_token %}
+<table class="table table-secondary table-bordered">
 
-    <table class="table table-secondary table-bordered">
+
+    <tr class="table-secondary" align="center">
+    <td colspan="2">
+
+        <div class="form-row">
+            <div class="form-group col-md-2 mb-0">
+            {{ form.PARTS_NR}}
+            </div>
+            <div class="form-group col-md-2 mb-0">
+                <a class="btn btn btn-primary" role="button" href="/customers/{{ form.Customer_ID.value }}">
+                    {{ form.Customer_ID|as_crispy_field  }}
+                </a>
+
+            </div>
+            <div class="form-group col-md-2 mb-0">
+                <a class="btn  btn-secondary" role="button"  href="/machines/{{ form.Copier_ID.value }}">
+            {{ form.ΜΗΧΑΝΗΜΑ }}
+                </a>
+            </div>
+            <div class="form-group col-md-2 mb-0">
+            {{ form.ΠΕΡΙΓΡΑΦΗ|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-1 mb-0">
+            {{ form.ΚΩΔΙΚΟΣ|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-2 mb-0">
+                {{ form.ΤΕΜΑΧΙΑ|as_crispy_field }}
+            </div>
+            <div class="form-group col-md-1 mb-0">
+                {{ form.Service_ID|as_crispy_field }}
+            </div>
+        </div>
+    </td>
+    </tr>
+    <tr class="table-secondary" align="center">
+        <td>
+     
+
+        </td>
+            <td>
+                {{ form.ΠΑΡΑΤΗΡΗΣΗΣ|as_crispy_field }}
+                <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
+                <button type="submit" class="btn btn-success">Αποθήκευση</button>
+
+            </td>
+
 
         <tr class="table-secondary" align="center">
-            <td align="center">
-                <div class="form-row">
-                    <div class="form-group col-md-2 mb-0">
-
-                        {{ form.PARTS_NR }}
-                    </div>
-
-                    <div class="form-group col-md-2 mb-0">
-
-
-                             {{  my_data.Πελάτης|as_crispy_field }}
-
-                    </div>
-
-                    <div class="form-group col-lg-3 mb-0">
-
-
-                            {{  my_data.Copier_ID|as_crispy_field }}
-
-
-                    </div>
-
-                        <div class="form-group col-md-1 mb-0">
-                            {{ form.ΚΩΔΙΚΟΣ }}
-                        </div>
+        <td align="left" colspan="2">
+            <div class="form-row">
 
 
 
-                        <div class="form-group col-md-1 mb-0">
-                            {{ form.ΤΕΜΑΧΙΑ }}
-                        </div>
-
-
-
-                    <div class="form-group col-md-2 mb-0">
-
-                            <h5>Ημερολόγιο   <br>{{  my_data.instance.pk }} </h5>
-
-                    </div>
-
-
-
-
-                    <div class="form-group col-md-1 mb-0">
-
-                            <h5>Συντήρηση <br>{{  my_data.Service_ID }}</h5>
-                        </a>
-
-
-                    </div>
-                </div>
-
-            </td>
-        </tr>
-        <tr>
-            <td align="center">
-                <div class="form-row">
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.ΠΕΡΙΓΡΑΦΗ }}
-                    </div>
-                    <div class="form-group col-md-5 mb-0">
-                        {{ form.ΠΑΡΑΤΗΡΗΣΗΣ }}
-                    </div>
-
-                    <div class="form-group col-md-4 mb-0">
-                        <button type="button" class="btn btn-info" onclick="goBack()">Πίσω</button>
-                    </div>
-                        <div class="form-group col-md-5 mb-0">
-                            <button name="add_service" type="submit" value="Αποθήκευση" class="btn btn-success">Αποθήκευση</button>
-
-                        </div>
+                <div class="form-group col-md-4 mb-0">
+                    {{ form.Calendar_ID }}
 
                 </div>
 
-            </td>
-        </tr>
-    </table>
+
+
+
+            </div>
+
+        </td>
+            </tr>
+        </table>
 
     </tr>
 
-    </table>
+</table>
 </form>
 
 <script>
@@ -123,7 +108,6 @@ function goBack() {
   window.history.back();
 }
 </script>
-
-
-
+</div>
+{% endblock content %}
 
