--- a/services/templates/services/detail.html
+++ b/services/templates/services/detail.html
@@ -119,7 +119,7 @@
                     <ol>
                         {% for i in files %}
                             <li>
-                                <a href="{{ MEDIA_URL }}{{ service_id }}/{{ i }}">{{ i }}</a>
+                                <a href="{{ MEDIA_URL }}{{ form.instance.Ημερομηνία|slice:'6:'  }}/{{ service_id }}/{{ i }}">{{ i }}</a>
 
                             </li>
                         {% endfor %}
